--- a/src/app.sass
+++ b/src/app.sass
@@ -16,3 +16,21 @@ html
     max-width: 1200px
     margin: 0 auto
     padding: 0 19px
+
+.products-grid
+    padding: 11rem 0
+    grid-gap: 2rem
+    display: grid
+    gap: 2rem
+    grid-template-columns: 1fr 1fr 1fr 1fr
+
+
+@media (max-width: 750px)
+    .products-grid
+        grid-template-columns: 1fr 1fr 1fr
+@media (max-width: 600px)
+    .products-grid
+        grid-template-columns: 1fr 1fr
+@media (max-width: 430px)
+    .products-grid
+        grid-template-columns: 1fr
