--- a/src/components/categoriesBTNS/categoriesBTNS.sass
+++ b/src/components/categoriesBTNS/categoriesBTNS.sass
@@ -5,6 +5,7 @@
     gap: 1rem
     justify-content: center
     width: 100%
+    margin-bottom: 4rem
     a
         color: #000
         font-size: 1.6rem
