--- a/src/components/itemMin/itemMin.sass
+++ b/src/components/itemMin/itemMin.sass
@@ -4,6 +4,8 @@
     outline-offset: -2px
     transition: all .15s ease-in
     position: relative
+    &:hover
+        outline: 2px solid rgba(0, 0, 0, .6)
     a 
         color: #000
         text-decoration: none
