--- a/src/app.sass
+++ b/src/app.sass
@@ -34,3 +34,26 @@ html
 @media (max-width: 430px)
     .products-grid
         grid-template-columns: 1fr
+
+.product-quant__btns
+    border: 1px solid #000
+    display: flex
+    button
+        background-color: #fff
+        border: none
+        color: #000
+        cursor: pointer
+        font-size: 3rem
+        height: 5.5rem
+        transition: all .2s
+        width: 5.5rem
+        &:first-child
+            border-right: 1px solid #000
+        &:last-child 
+            border-left: 1px solid #000
+    p
+        height: 5rem
+        outline-offset: -2px
+        padding-top: 10px
+        text-align: center
+        width: 6rem
