--- a/src/components/categoriesBTNS/categoriesBTNS.sass
+++ b/src/components/categoriesBTNS/categoriesBTNS.sass
@@ -6,7 +6,7 @@
     justify-content: center
     width: 100%
     margin-bottom: 4rem
-    a
+    div
         color: #000
         font-size: 1.6rem
         text-decoration: none
