--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -30,7 +30,7 @@
         cursor: pointer
         position: relative
     &__icons
-        display: flex
+        display: none 
         align-items: center
         justify-content: center
         background-color: #b6002c
@@ -43,5 +43,7 @@
         top: -10px
         width: 18px
         z-index: 20
+        &__active
+            display: flex
 .cont-sticky
     height: 8rem 
