--- a/src/components/itemMin/itemMin.sass
+++ b/src/components/itemMin/itemMin.sass
@@ -27,3 +27,8 @@
         font-weight: 600
         position: absolute
         bottom: 0
+
+
+@media (max-width: 980px)
+    .product__header 
+        height: 70%
