--- a/src/components/cartItem/cartItem.sass
+++ b/src/components/cartItem/cartItem.sass
@@ -1,20 +1,21 @@
 .cart
-    
     &__item
         background-color: #f2f2f2
         border: 1px solid #717171
         border-radius: 3px
         display: grid
-        grid-template-columns: 30fr 50fr 20fr
+        grid-template-columns: 30fr 50fr 25fr
         height: 15rem
         width: 100%
     &__img
+        display: flex
+        justify-content: center
+        align-items: center
         background-color: #fff
         height: 100%
         width: 100%
         img
             border-radius: 3px
-            height: 100%
             object-fit: cover
             width: 100%
     &__middle
@@ -47,3 +48,5 @@
         justify-content: space-between
         padding: 1.5rem
         text-align: right
+    &__priceItem
+        font-size: 2.4rem
