--- a/src/components/productMax/productMax.sass
+++ b/src/components/productMax/productMax.sass
@@ -1,4 +1,3 @@
-
 .product-max
     padding-top: 14rem
     &__wrapper
@@ -45,7 +44,7 @@
     &__right
         background-color: #e5e5e5
         height: 100%
-        padding: 16rem 5rem 8rem
+        padding: 10% 5rem 8rem
         width: 50%
         &__desc
             font-size: 2rem
@@ -74,13 +73,6 @@
         &:hover
             background-color: #000
             color: #fff
-
-           
-
-
-
-
-
     &__specifications
         display: flex
         justify-content: space-between
@@ -100,3 +92,51 @@
             font-weight: 600
         &__desc
             font-size: 1.65rem
+.product-quant__btns
+    border: 1px solid #000
+    display: flex
+    button
+        background-color: #fff
+        border: none
+        color: #000
+        cursor: pointer
+        font-size: 3rem
+        height: 5.5rem
+        transition: all .2s
+        width: 5.5rem
+        &:first-child
+            border-right: 1px solid #000
+        &:last-child 
+            border-left: 1px solid #000
+    p
+        height: 5rem
+        outline-offset: -2px
+        padding-top: 10px
+        text-align: center
+        width: 6rem
+
+@media (max-width: 1010px) 
+    .product-max
+        &__right
+            &__desc 
+                font-size: 1.7rem
+                line-height: 1.2
+        &__quant
+            font-size: 2rem
+            justify-content: space-between
+            margin-bottom: 5rem
+        &__add-btn
+                font-size: 1.1rem
+                height: 4rem
+    .product-quant__btns 
+        button 
+            font-size: 2rem
+            height: 3.5rem
+            transition: all 0.2s
+            width: 3.5rem
+        p 
+            height: 3rem
+            padding-top: 5px
+            width: 3rem
+     
+    
