getting started with adaptive

--- a/src/app.sass
+++ b/src/app.sass
@@ -28,11 +28,14 @@ html
 @media (max-width: 750px)
     .products-grid
         grid-template-columns: 1fr 1fr 1fr
+        padding: 4rem 0
 @media (max-width: 600px)
     .products-grid
         grid-template-columns: 1fr 1fr
 @media (max-width: 430px)
     .products-grid
         grid-template-columns: 1fr
+
+
 
 
