--- a/src/components/carousel/carousel.sass
+++ b/src/components/carousel/carousel.sass
@@ -31,3 +31,9 @@
             width: 4rem
     &__arrow
         color: #ffffff
+@media (max-width: 700px)
+    .carousel 
+        padding-bottom: 4rem
+
+
+
