--- a/src/components/cart/cart.sass
+++ b/src/components/cart/cart.sass
@@ -75,3 +75,11 @@
                 padding: 1rem 3.5rem
                 text-decoration: none
                 transition: all .2s
+
+@media (max-width: 950px)
+    .cart__body 
+        height: 80vh
+
+@media (max-width: 550px)
+    .cart 
+        width: 100%
