--- a/src/components/cartEmpty/cartEmpty.sass
+++ b/src/components/cartEmpty/cartEmpty.sass
@@ -14,3 +14,8 @@
         height: 4.4rem
         margin-top: 3rem
         width: 100%
+@media (max-width: 950px)
+    .cart-empty
+        margin: 3rem auto
+    
+
