--- a/src/components/footer/footer.sass
+++ b/src/components/footer/footer.sass
@@ -17,3 +17,12 @@ footer
         text-decoration: none
         &:hover
             text-decoration: underline
+@media (max-width: 1024px)
+    .footer__links 
+        margin: 0 4rem
+
+@media (max-width: 650px)
+    .footer__links 
+        gap: 1.5rem
+        a 
+            font-size: 1.5rem
