--- a/src/pages/home.sass
+++ b/src/pages/home.sass
@@ -5,3 +5,7 @@
         font-weight: 600
     &-grid 
         padding-top: 4rem
+@media (max-width: 800px)
+    .products
+        &__header
+            padding-top: 5rem 
