--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -47,3 +47,16 @@
             height: 100%
             object-fit: cover
             width: 100% 
+@media (max-width: 950px)
+    .banner
+        &__text 
+            padding: 5rem 5rem
+        &__description 
+            font-size: 2.2rem
+        &__specs 
+            font-size: 1.5rem
+        a button 
+            font-size: 1.3rem
+@media (max-width: 700px)
+    .banner 
+        padding-bottom: 4rem
