--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -17,6 +17,7 @@
         font-size: 1.8rem
         gap: 2.5rem
         text-transform: uppercase
+        align-items: center
     a
         color: #000
         text-decoration: none
@@ -47,3 +48,84 @@
             display: flex
 .cont-sticky
     height: 8rem 
+
+.hamburger-menu 
+    display: none
+    gap: 3rem
+
+.hamburger-hamb, .hamburger-cart 
+    font-size: 2.3rem
+    display: none
+    cursor: pointer
+
+.mobile-nav-full 
+    background-color: #F3F3F3
+    z-index: 200
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+
+
+.open-flex 
+    display: flex !important
+
+
+.closed-flex 
+    display: none !important
+
+
+.mobile-nav-full i 
+    font-size: 2.3rem
+    position: absolute
+    right: 25px
+    top: 49px
+    cursor: pointer
+
+
+.mobile-links 
+    font-size: 3rem
+    text-transform: uppercase
+    display: flex
+    flex-direction: column
+    gap: 2rem
+    justify-content: center
+    align-items: center
+    top: 44%
+    left: 50%
+    position: absolute
+    transform: translate(-50%, -50%)
+
+.mobile-links a 
+    color: black
+    text-decoration: none
+
+
+.mobile-links a:hover 
+    text-decoration: underline
+
+
+@media (max-width: 650px)
+    .header
+        &__wrapper 
+            height: 7rem
+        
+.cont-sticky
+    height: 5rem 
+@media (max-width:600px) 
+    .header__nav
+        .link
+            display: none
+
+    .hamburger-menu 
+        display: flex
+
+
+    .hamburger-cart, .hamburger-hamb 
+        display: flex
+    
+
+
+    
+
