--- a/src/components/news/news.sass
+++ b/src/components/news/news.sass
@@ -23,4 +23,15 @@
                 border: none
                 font-size: 1.7rem
                 padding: .7rem
+@media (max-width: 700px)
+    .news 
+        height: 15rem
+        &__text 
+            p 
+                font-size: 2rem
+            form 
+                input 
+                    font-size: 1.3rem
+                button 
+                    font-size: 1.3rem
         
