--- a/src/pages/categories.sass
+++ b/src/pages/categories.sass
@@ -29,3 +29,9 @@
             text-transform: uppercase
             font-weight: 700
 
+@media (max-width: 650px)
+    .categories
+        &__header 
+            padding-top: 10rem
+
+    
