working with adaptive on small devices

--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -60,3 +60,20 @@
 @media (max-width: 700px)
     .banner 
         padding-bottom: 4rem
+@media (max-width: 450px)
+    .banner
+        &__wrapper 
+            height: 32rem
+            &__reverse 
+                height: 30rem
+        &__text 
+            padding: 4rem 2rem
+        &__description 
+            font-size: 1.8rem
+        &__specs 
+            font-size: 1.3rem
+        a button 
+            font-size: 1rem
+
+
+
