--- a/src/components/cart/cart.sass
+++ b/src/components/cart/cart.sass
@@ -83,3 +83,7 @@
 @media (max-width: 550px)
     .cart 
         width: 100%
+@media (max-width: 350px)
+    .cart__subtotal__left a 
+        font-size: 1.5rem
+        padding: 1rem 1.5rem
