--- a/src/components/footer/footer.sass
+++ b/src/components/footer/footer.sass
@@ -26,3 +26,7 @@ footer
         gap: 1.5rem
         a 
             font-size: 1.5rem
+
+@media (max-width: 450px)
+    .footer__links 
+        gap: 0.7rem
