--- a/src/components/itemMin/itemMin.sass
+++ b/src/components/itemMin/itemMin.sass
@@ -32,3 +32,10 @@
 @media (max-width: 980px)
     .product__header 
         height: 70%
+
+@media (max-width: 425px)
+    .product 
+        height: 24rem
+    .product__header img 
+        max-height: 100%
+        width: auto
