--- a/src/app.sass
+++ b/src/app.sass
@@ -32,9 +32,15 @@ html
 @media (max-width: 600px)
     .products-grid
         grid-template-columns: 1fr 1fr
+@media (max-width: 450px)
+    .products-grid 
+        padding-top: 2rem
 @media (max-width: 430px)
-    .products-grid
-        grid-template-columns: 1fr
+    .products-grid 
+        grid-template-columns: 100%
+
+
+
 
 
 
