--- a/src/components/carousel/carousel.sass
+++ b/src/components/carousel/carousel.sass
@@ -35,5 +35,11 @@
     .carousel 
         padding-bottom: 4rem
 
+@media (max-width: 450px)
+    .carousel__header p 
+        font-size: 2.3rem
+        margin-bottom: 3.2rem
+
+
 
 
