--- a/src/components/cover/cover.sass
+++ b/src/components/cover/cover.sass
@@ -58,5 +58,9 @@
     .cover 
         padding-top: 7rem
 
-
+@media (max-width: 450px)
+    .cover-item__description 
+        font-size: 2rem
+    .cover__wrapper 
+        height: 33rem
 
