--- a/src/components/productMax/productMax.sass
+++ b/src/components/productMax/productMax.sass
@@ -191,3 +191,24 @@
                 font-size: 1.7rem
                 margin-bottom: 3rem
     
+@media (max-width: 450px)
+    .product-max
+        &__quant 
+            flex-direction: column
+        &__specifications 
+            flex-direction: column
+            gap: 1rem
+            height: auto
+            margin-bottom: 3rem
+        &__spec 
+            flex-direction: row
+        &__wrapper 
+            margin-bottom: -2rem
+@media (max-width: 375px)
+    .product-max
+        &__left 
+            display: block
+            &_imgs-small 
+                margin-top: 1rem
+                justify-content: normal
+                flex-direction: row
