--- a/src/pages/home.sass
+++ b/src/pages/home.sass
@@ -9,3 +9,10 @@
     .products
         &__header
             padding-top: 5rem 
+
+@media (max-width: 450px)  
+    .products__header 
+        font-size: 2rem
+        padding-top: 3rem
+        img 
+            width: 85%
