--- a/src/app.sass
+++ b/src/app.sass
@@ -24,6 +24,16 @@ html
     gap: 2rem
     grid-template-columns: 1fr 1fr 1fr 1fr
 
+.loading
+    align-items: center
+    margin-bottom: -4rem
+    padding-top: 17rem
+    padding-bottom: 10rem
+    font-size: 2.7rem
+    margin: 0 auto
+    text-align: center
+    font-weight: 700
+
 
 @media (max-width: 750px)
     .products-grid
